[package]
name = "cherrykernel"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# I'm going to try replacing these crates with mine in the future.
x86_64 = "0.14.3"
uart_16550 = "0.2.0"
spin = "0.5.2"
volatile = "0.2.6"
conquer-once = { version = "0.3.2", default-features = false }
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.9.0"
spinning_top = "0.2.4"
x2apic = { git = "https://github.com/kwzhao/x2apic-rs" }

[workspace]
members = ["boot"]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.bootloader]
git = "https://github.com/rust-osdev/bootloader"

[package.metadata.bootloader]
map-physical-memory = true
#esired-framebuffer-width = 1280
#desired-framebuffer-height = 720
kernel-stack-size = 67108864